<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmimo">BMiMO</string>
    <string name="bmi_background">bmi background</string>
    <string name="get_started_with_tracking_your_health">Get Started with \nTracking Your Health!</string>
    <string name="calculate_your_bmi_and_stay_on_top_of_your_wellness_journey_effortlessly">Calculate your BMI and stay on top of \nyour wellness journey, effortlessly.</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="age">Age</string>
    <string name="_30">30</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="_78">78</string>
    <string name="height_cm">Height (CM)</string>
    <string name="_175">175</string>
    <string name="slider_desc">slider desc</string>
    <string name="_50_cm">50 cm</string>
    <string name="_300_cm">300 cm</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="save_the_results">Save the results</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="bmi_results">BMI Results</string>
    <string name="_22">22</string>
    <string name="underweight_bmi_male">Underweight: BMI less than 18.5 \nNormal weight: BMI 18.5 to 24.9 \nOverweight: BMI 25 to 29.9 \nObesity: 30 to 40</string>
    <string name="underweight_bmi_female">Underweight: BMI less than 19.0 \nNormal weight: BMI 19.0 to 24.9 \nOverweight: BMI 25 to 29.9 \nObesity: 30 to 40</string>
</resources>