<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:background="@color/light_blue">

        <TextView
            android:id="@+id/title_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="81dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/bmimo"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:contentDescription="@string/bmi_background"
            android:src="@drawable/bmi_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bmi" />

        <TextView
            android:id="@+id/get_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/get_started_with_tracking_your_health"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/image_bg"
            app:layout_constraintTop_toBottomOf="@id/image_bg" />

        <TextView
            android:id="@+id/get_start_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/calculate_your_bmi_and_stay_on_top_of_your_wellness_journey_effortlessly"
            android:textColor="@color/very_soft_blue"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/image_bg"
            app:layout_constraintTop_toBottomOf="@id/get_start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/inter"
            android:paddingHorizontal="117dp"
            android:paddingVertical="27dp"
            android:text="@string/get_started"
            android:textColor="@color/very_dark_blue"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_start_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
