<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/very_pale_blue"
    tools:context=".CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/very_pale_blue"
        android:paddingBottom="32dp">

        <TextView
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/inter"
            android:text="@string/bmi_calculator"
            android:textColor="@color/very_dark_blue"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/age_card"
            android:layout_width="156dp"
            android:layout_height="175dp"
            android:layout_marginTop="39dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toStartOf="@id/weight_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/age"
                    android:textColor="@color/very_dark_grayish_blue"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/age_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="51dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/_30"
                    android:textColor="@color/light_blue"
                    android:textSize="57sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minus_age"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="28dp"
                    android:backgroundTint="@color/very_dark_blue"
                    android:gravity="center"
                    android:padding="8dp"
                    app:icon="@drawable/minus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/age_number" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus_age"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginEnd="28dp"
                    android:backgroundTint="@color/very_dark_blue"
                    android:gravity="center"
                    android:padding="8dp"
                    app:icon="@drawable/baseline_add_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/age_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/weight_card"
            android:layout_width="156dp"
            android:layout_height="175dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="39dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/age_card"
            app:layout_constraintTop_toBottomOf="@id/title_1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/weight_kg"
                    android:textColor="@color/very_dark_grayish_blue"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/weight_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="51dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/_78"
                    android:textColor="@color/light_blue"
                    android:textSize="57sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minus_weight"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="28dp"
                    android:backgroundTint="@color/very_dark_blue"
                    android:gravity="center"
                    android:padding="8dp"
                    app:icon="@drawable/minus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weight_number" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus_weight"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginEnd="28dp"
                    android:backgroundTint="@color/very_dark_blue"
                    android:gravity="center"
                    android:padding="8dp"
                    app:icon="@drawable/baseline_add_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weight_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/height_card"
            android:layout_width="348dp"
            android:layout_height="183dp"
            android:layout_marginTop="23dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/height_cm"
                    android:textColor="@color/very_dark_grayish_blue"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/height_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/_175"
                    android:textColor="@color/light_blue"
                    android:textSize="57sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:contentDescription="@string/slider_desc"
                    android:value="175.0"
                    android:valueFrom="50.0"
                    android:valueTo="300.0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/height_number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="31dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/_50_cm"
                    android:textColor="@color/very_dark_grayish_blue"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/height_number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:layout_marginEnd="28dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/_300_cm"
                    android:textColor="@color/very_dark_grayish_blue"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/height_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/male_card"
            android:layout_width="142dp"
            android:layout_height="150dp"
            android:layout_marginTop="23dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toStartOf="@id/female_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/height_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:id="@+id/male_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:background="@color/very_soft_blue"/>

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/male"
                    android:src="@drawable/male"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/male"
                    android:textColor="@color/very_dark_grayish_blue"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/female_card"
            android:layout_width="142dp"
            android:layout_height="150dp"
            android:layout_marginTop="23dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/male_card"
            app:layout_constraintTop_toBottomOf="@id/height_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="@+id/male_card"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout2">

                <View
                    android:id="@+id/female_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:background="@color/very_soft_blue"/>

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/female"
                    android:src="@drawable/female"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/female"
                    android:textColor="@color/very_dark_grayish_blue"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_bmi_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:fontFamily="@font/inter"
            android:paddingHorizontal="117dp"
            android:paddingVertical="27dp"
            android:text="@string/calculate_bmi"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/male_card" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>